# gradient_descent

./: .gitmodules  LICENSE  README.md
.github/workflows/: test.yml
c/: CMakeLists.txt  main.c
c/cmake/: Findmatlibr.cmake  Findopenblas.cmake
c/scripts/: build.sh  cleanup.sh  setup_dependencies.sh
c/src/: helpers.c  helpers.h  losses.c  losses.h  matrix.c  matrix.h  sgd.c  sgd.h  stats.c  stats.h
c/tests/: CMakeLists.txt  test_helpers.c  test_losses.c  test_matrix.c  test_stats.c
python/: main.py
python/src/: helpers.py
python/test/: test_gradient_descent.py  test_helpers.py  test_losses.py  test_metrics.py
